# simulator_env

./: README.md  pyproject.toml  test_run_script.py
Data/: cumilative_utility.py
Models/: home.py  home_medication.py  home_telepresence.py
Other_files/: sim_background.xcf
agent_types/: caller.py  care_worker.py  home_agent.py  medication_patient.py  medication_robot.py  patient.py  robot.py  tele_patient.py  tele_presence_robot.py  wall.py
common_functions/: gen_id.py  visibilty.py
ethical_governor/: deontology_governor.py  elder_care_sim_deontology.yaml  elder_care_sim_utilitarian.yaml  ethical_governor.py
exp1/: home_sim.py  mesa_exp_1.py  viz_test_1.py
experiments/: bathroom_dilemma_1_utilitarian.py
genralisability_exp_scripts/: CaseGen_exp_run_script.py  CaseGen_exp_run_script_medication.py  CaseGen_exp_run_script_teleP.py  KvsP_exp_run_script_bathroom.py  KvsP_exp_run_script_bathroom_v2.py  KvsP_exp_run_script_bedroom.py  KvsP_exp_run_script_bedroom_v2.py  KvsP_exp_run_script_medication.py  KvsP_exp_run_script_medication_v2.py  KvsP_exp_run_script_teleP.py  KvsP_exp_run_script_teleP_v2.py  exp_run_script.py  modify_case_base.py  modify_case_base_medication.py  modify_case_base_medication_v2.py  modify_case_base_teleP.py  modify_case_base_teleP_v2.py  modify_case_base_v2.py  test_run.py  test_run_medication.py  test_run_telepresence.py  test_spec_KvP.json  test_spec_KvP_medication.json  test_spec_KvP_teleP.json  test_spec_combinations.json  test_spec_combinations_medications.json  test_spec_combinations_medications_test.json  (+3 more)
mesa_updated/: agent.py  (+3 more)
(+543 files in other folders)
