[tool.poetry]
name = "simulator-env"
version = "0.1.0"
description = ""
authors = ["rajitharama <rajitharamanayake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=2.1.2"
numpy = ">=1.26.1"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"
openpyxl = "^3.1.2"
tornado = "^6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
